--- a/views/apis/edit.ejs
+++ b/views/apis/edit.ejs
@@ -67,7 +67,7 @@
         <div class="form-group">
           <label>Category:</label>
           <select name="category" value="<%- api.category %>" id="api-category" class="form-control">
-            // populates with pre-selected category
+            <!-- populates with pre-selected category -->
             <%
             var options = [ "Music", "Recommendations", "Transportation", "Fitness", "Social", "Photos", "Shopping", "Real Estate", "Mapping", "Weather", "Video" ];
             for ( var i = 0; i < options.length; i++ )
@@ -86,7 +86,7 @@
           <div class="form-group">
             <label>Install:</label>
                   <select class="form-control" id="api-install" name="install" value="<%- api.install %>">
-                    // populates with pre-selected install
+                    <!-- populates with pre-selected install -->
                     <%
                     var options = [ 1, 2, 3, 4, 5 ];
                     for ( var i = 0; i < options.length; i++ )
@@ -98,7 +98,7 @@
                   </select>
                 </div>
               <select class="form-control" id="api-readability" name="readability" value="<%- api.readability %>">
-                // populates with pre-selected readability
+                <!-- populates with pre-selected readability -->
                 <%
                 var options = [ 1, 2, 3, 4, 5 ];
                 for ( var i = 0; i < options.length; i++ )
@@ -110,7 +110,7 @@
               </select>
             </div>
               <select class="form-control" id="api-technicality" name="technicality" value="<%- api.technicality %>">
-                // populates with pre-selected technicality
+                <!-- populates with pre-selected technicality -->
                 <%
                 var options = [ 1, 2, 3, 4, 5 ];
                 for ( var i = 0; i < options.length; i++ )
