edit page now remembers preselected input for ratings

--- a/views/apis/edit.ejs
+++ b/views/apis/edit.ejs
@@ -82,7 +82,7 @@
         <div class="rated-categories">
           <hr>
           <h4>Ratings</h4>
-  <!-- forces users to choose from 1-5 but will not remember their previous input -->
+  <!-- forces users to choose from 1-5 -->
           <div class="form-group">
             <label>Install:</label>
                   <select class="form-control" id="api-install" name="install" value="<%- api.install %>">
